stage0/tests/compile_fail/types/type_if_cond.dg
func main() -> i32 {
    if 5 { 1 } else { 0 }
}
